--- a/index.html
+++ b/index.html
@@ -18,18 +18,24 @@
         <h1>Team Study <small>Session 2</small></h1>
       </div>
     </div>
-    <div class="col-xs-offset-4 col-xs-2">
-      <button class="btn btn-success" type="button" id="id_show">Show!</button>
+    <div class="col-xs-offset-2 col-xs-3">
+      <button class="btn btn-success" type="button" id="id_show">Show</button>
     </div>
-    <div class="col-xs-6">
-      <button class="btn btn-warning" type="button" id="id_hint">Hint!</button>
+    <div class="col-xs-3">
+      <button class="btn btn-warning" type="button" id="id_hint">Hint</button>
+      <span class="message">Expand the rectangle</span>
     </div>
-    <div class="col-xs-offset-3 col-xs-7">
+    <div class="col-xs-3">
+      <h4 class="counter">Counter: </h4>
+      <p class="counter" id="id_counter">0</p>
+    </div>
+    <div class="col-xs-offset-2 col-xs-1">
       <div class="rect" id='id_rect'>
       </div>
     </div>
   </div>
   <script src="https://code.jquery.com/jquery-3.1.0.min.js" integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s=" crossorigin="anonymous"></script>
+
   <!-- Latest compiled and minified JavaScript -->
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
   <script src="script.js"></script>
