--- a/index.html
+++ b/index.html
@@ -18,24 +18,50 @@
         <h1>Team Study <small>Session 2</small></h1>
       </div>
     </div>
-    <div class="col-xs-offset-2 col-xs-3">
+    <div class="col-xs-offset-2 col-xs-2">
       <button class="btn btn-success" type="button" id="id_show">Show</button>
     </div>
     <div class="col-xs-3">
       <button class="btn btn-warning" type="button" id="id_hint">Hint</button>
       <span class="message">Expand the rectangle</span>
     </div>
-    <div class="col-xs-3">
+    <div class="col-xs-2">
       <h4 class="counter">Counter: </h4>
       <p class="counter" id="id_counter">0</p>
     </div>
-    <div class="col-xs-offset-2 col-xs-1">
+    <div class="col-xs-1">
+      <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#myModal">
+        Modal window
+      </button>
+    </div>
+    <div class="col-xs-offset-2 col-xs-2">
       <div class="rect" id='id_rect'>
       </div>
     </div>
   </div>
+  <!-- Button trigger modal -->
+  </div>
+  <div class="modal fade" id="myModal" tabindex="-1" role="dialog">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+          <h4 class="modal-title">Thank you for click :-)</h4>
+        </div>
+        <div class="modal-body">
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary">Save</button>
+        </div>
+      </div>
+      <!-- /.modal-content -->
+    </div>
+    <!-- /.modal-dialog -->
+  </div>
+  <!-- /.modal -->
   <script src="https://code.jquery.com/jquery-3.1.0.min.js" integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s=" crossorigin="anonymous"></script>
-
   <!-- Latest compiled and minified JavaScript -->
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
   <script src="script.js"></script>
